fix: fix margin bottom of app

--- a/src/index.html
+++ b/src/index.html
@@ -162,6 +162,7 @@
             color: #AAAAAA; /* Color del texto */
             border-collapse: collapse; /* Remueve espacios entre bordes */
             width: 100%;
+            margin-bottom: 20px;
         }
 
         th, td {
