feat(index.css): separate styles in other file

--- a/src/index.html
+++ b/src/index.html
@@ -31,153 +31,6 @@
         </div>
     </div>
     <script src="renderer.js"></script>
-
-    <style>
-        /* General Styles */
-        body {
-            background-color: #1E1E1E; /* Fondo más oscuro */
-            color: #E1E1E1; /* Texto más claro */
-            font-family: Arial, sans-serif;
-        }
-
-        html, body {
-            height: 100%;
-            margin: 0;
-            overflow: hidden;
-            padding-top: 6px;
-        }
-
-        .container-fluid {
-            height: 100%;
-        }
-
-        .row {
-            height: 100%;
-        }
-
-        /* Scrollable Lists */
-        .scrollable-list {
-            height: 100%;
-            overflow-y: auto;
-            background: #252526; /* Fondo más oscuro para contraste */
-            color: #E1E1E1;
-            border-right: 1px solid #3C3C3C;
-        }
-
-        #app-list div {
-            cursor: pointer;
-            padding: 8px 10px;
-            transition: background-color 0.3s ease;
-        }
-
-        #app-list div:hover {
-            background-color: #3C3C3C;
-        }
-
-        #app-list div.selected {
-            background-color: #007ACC; /* Azul para la selección */
-            color: #FFFFFF;
-        }
-
-        /* Search Bar */
-        #searchBar {
-            width: 100%;
-            padding: 12px 15px;
-            margin-bottom: 10px;
-            box-sizing: border-box;
-            border: 1px solid #3C3C3C;
-            border-radius: 5px;
-            background-color: #2D2D30;
-            color: #E1E1E1;
-            font-size: 14px;
-            outline: none;
-            transition: border-color 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        #searchBar:focus {
-            border-color: #007ACC;
-            box-shadow: 0 0 5px #007ACC;
-        }
-
-        #searchBar::placeholder {
-            color: #A1A1A1;
-            opacity: 0.8;
-        }
-
-        /* Details Panel */
-        #details {
-            display: flex;
-            flex-direction: column;
-            height: 100%;
-        }
-
-        #details-table-container {
-            flex: 1;
-            overflow-y: auto;
-            border-top: 1px solid #3C3C3C;
-            margin-top: 10px;
-        }
-
-        /* Table Styles */
-        table {
-            background-color: #252526;
-            color: #E1E1E1;
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        th, td {
-            border: 1px solid #3C3C3C;
-            padding: 8px;
-            text-align: left;
-            font-size: 14px;
-        }
-
-        th {
-            background-color: #333333;
-            color: #FFFFFF;
-            font-weight: bold;
-        }
-
-        tr:nth-child(even) {
-            background-color: #2D2D30;
-        }
-
-        tr:hover {
-            background-color: #3C3C3C;
-        }
-
-        td a {
-            color: #1E90FF;
-            text-decoration: none;
-        }
-
-        td a:hover {
-            text-decoration: underline;
-        }
-
-        /* Scrollbars */
-        #details-table-container::-webkit-scrollbar,
-        #app-list::-webkit-scrollbar {
-            width: 8px;
-        }
-
-        #details-table-container::-webkit-scrollbar-thumb,
-        #app-list::-webkit-scrollbar-thumb {
-            background: #3C3C3C;
-            border-radius: 4px;
-        }
-
-        #details-table-container::-webkit-scrollbar-thumb:hover,
-        #app-list::-webkit-scrollbar-thumb:hover {
-            background: #5A5A5A;
-        }
-
-        #details-table-container::-webkit-scrollbar-track,
-        #app-list::-webkit-scrollbar-track {
-            background: #252526;
-        }
-
-    </style>
+    <link href="index.css" rel="stylesheet"/>
 </body>
 </html>
