--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,14 @@
             </div>
         </div>
     </div>
-    <script src="renderer.js"></script>
+
+    <script src="js/menu/menu.js"></script>
+    <script src="js/search-bar-listener.js"></script>
+    <script src="js/load-app-listener.js"></script>
+    <script src="js/load-app-list.js"></script>
+    <script src="js/app-resizer-listener.js"></script>
+    <script src="js/app.js"></script>
+    
     <link href="index.css" rel="stylesheet"/>
 </body>
 </html>
