feat: add messages.js. add message when package not found

--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,10 @@
 
                     <div id="spinner"></div>
                 </div>
-                
                 <div id="app-list" class="scrollable-list"></div>
             </div>
             <div class="col-9" id="details">
+                <div id="message-container"></div>
                 <h1 id="app-title"></h1>
                 <h4 id="app-version"></h4>
                 <p id="app-description"></p>
@@ -37,6 +37,7 @@
         </div>
     </div>
 
+    <script src="js/messages.js"></script>
     <script src="js/menu/menu.js"></script>
     <script src="js/search-bar-listener.js"></script>
     <script src="js/load-app-listener.js"></script>
