refactor: add urls to app details

--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,16 @@
             </div>
             <div class="col-9" id="details">
                 <div id="message-container"></div>
-                <h1 id="app-title"></h1>
-                <h4 id="app-version"></h4>
-                <p id="app-description"></p>
+
+                <div id="app-title"></div>
+                <div id="app-version"></div>
+
+                <div id="urls">
+                    <div id="url"></div>
+                    <div id="aur-url"></div>
+                </div>
+
+                <div id="app-description"></div>
 
                 <div id="details-table-container">
                     <table>
