--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,7 @@
         </div>
     </div>
 
+    <script src="js/ApiConfig.js"></script>
     <script src="js/messages.js"></script>
     <script src="js/menu/menu.js"></script>
     <script src="js/search-bar-listener.js"></script>
